rather a lot of changes to make hyperestraier search be a plugin, allowing for other types of search engine plugins if wanted, and also opening up a lot of new possibilities for other kinds of plugins later
some notable changes along the way:

- lots of new hook types: cgi, render, delete
- wrapper files fixed to support config strings with newlines in them
- HEADERCONTENT in page template useful for plugins. Probably needs to be
  expanded to more such for other places plugins might want to add content.
- remove unnecessary wrappers field from config info stored in wrappers

--- a/debian/NEWS
+++ b/debian/NEWS
@@ -5,6 +5,10 @@ ikiwiki (1.1) unstable; urgency=low
   be changed to set rcs => "svn"; if your setup file sets svn => 0
   then change it to use rcs => "" to disable svn.
 
+  The --hyperestraier switch is gone too. To enable searching, turn on the
+  search plugin, by passing --plugin=search or through the plugin setting in
+  the config file.
+
   You will need to rebuild your wiki when upgrading to this version.
   If you listed your wiki in /etc/ikiwiki/wikilist this will be done
   automatically.
