web commit by joey

--- a/doc/todo/done/htmlvalidation.mdwn
+++ b/doc/todo/done/htmlvalidation.mdwn
@@ -31,7 +31,7 @@
 	Because [ [inlinepage] ] isn't separated by a blank line it gets treated as a block-level element. Hmm, will this stop all formatting, including *'s to em-tags? --[[JeroenSchot]]
 
     Ah didn't realize you meant it fixed it at the markdown level. I'll
-    think about making [[postprocessordirective]]s into
+    think about making postprocessordirectives into
     [[preprocessordirective]]s instead, then I could use that fix (but I'm not
     sure how feasible it is to do that). --[[Joey]]
 
