web commit by joey

--- a/doc/plugins/orphans.mdwn
+++ b/doc/plugins/orphans.mdwn
@@ -1,4 +1,4 @@
-This plugin generates a list of orhpaned pages -- pages that no other page
+This plugin generates a list of orphaned pages -- pages that no other page
 links to.
 
 The optional parameter "pages" can be a [[GlobList]] specifying the pages
