--- a/doc/plugins/orphans.mdwn
+++ b/doc/plugins/orphans.mdwn
@@ -4,7 +4,7 @@ links to.
 The optional parameter "pages" can be a [[GlobList]] specifying the pages
 to check for orphans, default is search them all.
 
-Note that it takes [[backlinks]] into account, but does not count inlining a
+Note that it takes [[BackLinks]] into account, but does not count inlining a
 page as linking to it, so will generally count many blog-type pages as
 orphans.
 
