web commit by joey

--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -8,7 +8,7 @@ or the equivalent line in [[ikiwiki.setup]].
 
 ## Plugin directory
 
-Add your contributed plugins here. Or add ideas to the [[todo|todo/plugins]] page.
+Add your contributed plugins here. Or add ideas to the [[todo|todo/plugin]] page.
 
 [[inline pages="plugins/* !plugins/write !*/Discussion" archive="yes" rootpage="plugins/contrib" show="30"]]
 
