--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -1,6 +1,6 @@
 Suggestions of ideas for plugins:
 
-* list of registered users
+* list of registered users - tricky because it sorta calls for a way to rebuild the page when a new user is registered. Might be better as a cgi?
 * a [[todo/link_map]]
 * [[todo/sigs]] ?
 * [[pageindexes]]
