* Added smiley plugin, nicely controlled and documented by the smileys page. * Copied in some smileys from Moin Moin.

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,8 @@ ikiwiki (1.1) UNRELEASED; urgency=low
   * Add some basic docs about writing RCS modules.
   * Broke search capability out into a plugin, removed the --hyperestraier
     switch.
+  * Added smiley plugin, nicely controlled and documented by the smileys page.
+  * Copied in some smileys from Moin Moin.
 
  -- Joey Hess <joeyh@debian.org>  Tue,  2 May 2006 14:13:59 -0400
 
