--- a/basewiki/helponformatting.mdwn
+++ b/basewiki/helponformatting.mdwn
@@ -54,6 +54,9 @@ To link to any other web page, or to an email address, you can just put the url 
 Advanced users can use [[PreProcessorDirective]]s to do additional cool
 stuff.
 
+Also, if the smiley plugin is enabled in your wiki, you can insert
+[[smileys]] and some other useful symbols.
+
 ----
 
 This style of text formatting is called [[MarkDown]].
