--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -1,7 +1,8 @@
 There's documentation if you want to [[write]] your own plugins, or you can install and use plugins contributed by others. 
 
 The ikiwiki package includes some standard plugins that are installed and
-by default. These include [[inline]], [[pagecount]], and [[brokenlinks]], and [[search]]. Of these, [[inline]] is enabled by default.
+by default. These include [[inline]], [[pagecount]], [[brokenlinks]],
+[[smiley]], and [[search]]. Of these, [[inline]] is enabled by default.
 
 To enable other plugins, use the `--plugin` switch described in [[usage]],
 or the equivalent line in [[ikiwiki.setup]].
