--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -5,7 +5,15 @@ Suggestions of ideas for plugins:
 * [[todo/sigs]] ?
 * [[pageindexes]]
 * Wiki stats, such as total number of links, most linked to pages
-* Support [[RecentChanges]] as a regular page containing a plugin that updates each time there is a change, and statically builds the recent changes list. (Would this be too expensive/inflexible? There might be other ways to do it as a plugin, like making all links to RecentChanges link to the cgi and have the cgi render it on demand.)
+
+* Support [[RecentChanges]] as a regular page containing a plugin that
+  updates each time there is a change, and statically builds the recent
+  changes list. (Would this be too expensive/inflexible? There might be
+  other ways to do it as a plugin, like making all links to RecentChanges
+  link to the cgi and have the cgi render it on demand.) Or using an iframe
+  to inline the cgi, although firefox seems to render that nastily with
+  nested scroll bars.
+
 * Support for smileys or other symbols. I appreciate the support for check
   marks, etc in other wikis. Needs some free smiley files.
 * For PlaceWiki I want to be able to do some custom plugins, including one
