web commit by joey

--- a/doc/smileys.mdwn
+++ b/doc/smileys.mdwn
@@ -29,7 +29,7 @@ Just write the text of a smiley to display it.
 * \{*}	[[smileys/star_on.png]]
 * \{o}	[[smileys/star_off.png]]
 
-For example: {*} :-) {*}
+For example: {*} B) {*}
 
 ----
 
