web commit by joey

--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -10,9 +10,11 @@ Suggestions of ideas for plugins:
   updates each time there is a change, and statically builds the recent
   changes list. (Would this be too expensive/inflexible? There might be
   other ways to do it as a plugin, like making all links to RecentChanges
-  link to the cgi and have the cgi render it on demand.) Or using an iframe
+  link to the cgi and have the cgi render it on demand.) 
+
+  Or using an iframe
   to inline the cgi, although firefox seems to render that nastily with
-  nested scroll bars.
+  nested scroll bars. :-(
 
 * For PlaceWiki I want to be able to do some custom plugins, including one
   that links together subpages about the same place created by different
