web commit by joey

--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -24,3 +24,9 @@ Suggestions of ideas for plugins:
   so it needs to register dependencies pre-emptively between pages,
   or something. It's possible that this is a special case of backlinks and
   is best implemented by making backlinks a plugin somehow. --[[Joey]]
+
+All the kinds of plugins that blogging software has is also a possibility:
+
+* Blog post calendar
+* technocrati pinger
+* Tag stuff?
