web commit by joey

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -26,7 +26,7 @@ Some of ikiwiki's features:
 
 * support for other file types
 
-  ikiwiki also supports files of any other type, including raw html, text,
+  ikiwiki also supports files of any other type, including plain text,
   images, etc. These are not converted to wiki pages, they are just copied
   unchanged by ikiwiki as it builds your wiki. So you can check in an image,
   program, or other special file and link to it from your wiki pages.
