web commit by joey

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -41,7 +41,7 @@ Some of ikiwiki's features:
   matching a specified [[GlobList]] will be displayed as a weblog within
   the blog page. And an RSS feed can be generated to follow the blog.
 
-  Ikiwikit's own [[TODO]] and [[news]] pages are good examples of some of
+  Ikiwiki's own [[TODO]], [[news]], and [[plugins]] pages are good examples of some of
   the flexible ways that this can be used.
 
 * Fast compiler
