web commit by ThomasSchwinge: Different sorts of links

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -39,7 +39,15 @@ Bulleted list
 * item
 * just to try this stuff - looks kool!
 
-[[WikiLink]]
+----
+
+## Different sorts of links:
+
+* [[WikiLink]]
+* [[different name for a WikiLink][WikiLink]]
+* <http://www.gnu.org/>
+* [GNU](http://www.gnu.org/)
+* [Email](mailto:noone@invalid)
 
 ----
 
