web commit by ThomasSchwinge: Fix the last commit.

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -44,7 +44,7 @@ Bulleted list
 ## Different sorts of links:
 
 * [[WikiLink]]
-* [[different name for a WikiLink][WikiLink]]
+* [[different_name_for_a_WikiLink|WikiLink]]
 * <http://www.gnu.org/>
 * [GNU](http://www.gnu.org/)
 * [Email](mailto:noone@invalid)
