web commit by ThomasSchwinge

--- a/doc/todo/case.mdwn
+++ b/doc/todo/case.mdwn
@@ -3,3 +3,4 @@ Being case insensative is handy, but it does make the [[BackLinks]] and
 support pagenames that have uppercase, while still allowing them to be
 linked to using any case.
 
+Also, newly created pagenames that include upper case characters should perhaps not automatically be converted to lower case then.
