web commit by ThomasSchwinge

--- a/doc/about_rcs_backends.mdwn
+++ b/doc/about_rcs_backends.mdwn
@@ -54,6 +54,8 @@ rcs_commit().  Is rcs_prepedit() suitable?
 It follows that the HTML rendering and the CGI handling can be completely
 separated parts in ikiwiki.
 
+What repository should [[RecentChanges]] and [[History]] work on?  R1?
+
 ##### Rationale for doing it differently than in the Subversion case
 
 darcs is a distributed RCS, which means that every checkout of a
