web commit by AlexHudson

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -9,3 +9,4 @@ This page is to track users of ikiwiki.
 * [kite](http://kitenet.net)
 * [Bright Cloud](http://brightcloud.lcsee.wvu.edu/), a project of WVU LCSEE
 * [David Moreno Garza's personal wiki](http://anorak.com.ve/~damog/wiki)
+* [UK Software Patents info page](http://www.softwarepatents.co.uk/)
