--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -25,6 +25,8 @@ Suggestions of ideas for plugins:
   or something. It's possible that this is a special case of backlinks and
   is best implemented by making backlinks a plugin somehow. --[[Joey]]
 
+* Splitting out html sanitisation should be easy to do.
+
 All the kinds of plugins that blogging software has is also a possibility:
 
 * Blog post calendar
