web commit by joey

--- a/doc/about_rcs_backends.mdwn
+++ b/doc/about_rcs_backends.mdwn
@@ -8,7 +8,7 @@ as opposed to using a editor and the RCS interface.
 
 ### [[Subversion]]
 
-Subversion was that first RCS to be supported by ikiwiki.
+Subversion was the first RCS to be supported by ikiwiki.
 
 #### How does it work internally?
 
