--- a/doc/plugins/write.mdwn
+++ b/doc/plugins/write.mdwn
@@ -147,3 +147,5 @@ modules. These are in the `IkiWiki::RCS` namespace, for example
 Each RCS plugin must support all the IkiWiki::rcs\_* functions.
 See IkiWiki::RCS::Stub for the full list of functions. It's ok if
 rcs\_getctime does nothing except for throwing an error.
+
+See [[about_RCS_backends]] for some more info.
