--- a/doc/todo/automatic_rebuilding_of_html_pages.mdwn
+++ b/doc/todo/automatic_rebuilding_of_html_pages.mdwn
@@ -1,1 +1,3 @@
 It seems that pages like [[Todo]] aren't rebuilt automatically when a new item is added using the web interface.
+
+AFAIK this is working ok. For example, this page appears in [[TODO]]. Maybe you need to force-refresh the page in your web browser? --[[Joey]]
