dirname, basename, bestlink, linkify, pagetitle, titlepage. * Allow links of the form [[some page|page]], with whitespace in the link   text.

--- a/basewiki/wikilink.mdwn
+++ b/basewiki/wikilink.mdwn
@@ -15,5 +15,5 @@ Note that if the file linked to by a WikiLink looks like an image, it will
 be displayed inline on the page.
 
 It's also possible to write a WikiLink that uses something other than the
-page name as the link text. For example "\[[foo_bar|SandBox]]" links to the
-SandBox page, but the link will appear like this: [[foo_bar|SandBox]]
+page name as the link text. For example "\[[foo bar|SandBox]]" links to the
+SandBox page, but the link will appear like this: [[foo bar|SandBox]]
