--- a/debian/changelog
+++ b/debian/changelog
@@ -27,7 +27,7 @@ ikiwiki (1.1) UNRELEASED; urgency=low
   * Split off an IkiWiki.pm out of ikiwiki and have all the other modules use
     it, this will allow for adding a unit test suite.
   * Add unit tests for several core functions, including globlist_match,
-    dirname, basename, and bestlink.
+    dirname, basename, bestlink, linkify, pagetitle, titlepage.
   * Smart globlist merging.
   * Patch from Thomas Schwinge to switch from --svn to --rcs=svn, etc,
     to pave the way for adding other RCS support. This also changes the
@@ -41,8 +41,10 @@ ikiwiki (1.1) UNRELEASED; urgency=low
     switch.
   * Added smiley plugin, nicely controlled and documented by the smileys page.
   * Copied in some smileys from Moin Moin.
+  * Allow links of the form [[some page|page]], with whitespace in the link
+    text.
 
- -- Joey Hess <joeyh@debian.org>  Tue,  2 May 2006 14:13:59 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu,  4 May 2006 14:46:46 -0400
 
 ikiwiki (1.0) unstable; urgency=low
 
