--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -27,6 +27,8 @@ Suggestions of ideas for plugins:
 
 * Splitting out html sanitisation should be easy to do.
 
+* interwiki links
+
 All the kinds of plugins that blogging software has is also a possibility:
 
 * Blog post calendar
