--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -2,7 +2,8 @@ There's documentation if you want to [[write]] your own plugins, or you can inst
 
 The ikiwiki package includes some standard plugins that are installed and
 by default. These include [[inline]], [[pagecount]], [[brokenlinks]],
-[[smiley]], and [[search]]. Of these, [[inline]] is enabled by default.
+[[search]], [[smiley]], and even [[haiku]]. 
+Of these, [[inline]] is enabled by default.
 
 To enable other plugins, use the `--plugin` switch described in [[usage]],
 or the equivalent line in [[ikiwiki.setup]].
