web commit by joey

--- a/doc/plugins/haiku.mdwn
+++ b/doc/plugins/haiku.mdwn
@@ -1,7 +1,7 @@
 This plugin allows inserting a randomly generated haiku into a wiki page.
-Just type \\[[haiku hint="argument with a bear"]].
+Just type \\[[haiku hint="argument"]].
 
-[[haiku hint="argument with a bear"]]
+[[haiku hint="argument"]]
 
 The hint parameter can be omitted, it only provides the generator a hint at
 what to write the haiku about. If no hint is given, it might base it on the
