--- a/doc/plugins/haiku.mdwn
+++ b/doc/plugins/haiku.mdwn
@@ -3,7 +3,7 @@ Just type \\[[haiku hint="argument"]].
 
 [[haiku hint="argument"]]
 
-The hint parameter can be omitted, it only provides the generator a hint at
+The hint parameter can be omitted, it only provides the generator a hint of
 what to write the haiku about. If no hint is given, it might base it on the
 page name. Since the vocabulary it knows is very small, many hints won't
 affect the result at all.
