--- a/debian/changelog
+++ b/debian/changelog
@@ -43,8 +43,10 @@ ikiwiki (1.1) UNRELEASED; urgency=low
   * Copied in some smileys from Moin Moin.
   * Allow links of the form [[some page|page]], with whitespace in the link
     text.
+  * Removed --sanitize and --no-sanitize, replaced with --plugin htmlscrubber
+    and --disable-plugin htmlscrubber.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  5 May 2006 00:14:53 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  5 May 2006 01:28:19 -0400
 
 ikiwiki (1.0) unstable; urgency=low
 
