web commit by ThomasSchwinge

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -49,6 +49,7 @@ Bulleted list
 
 * [[WikiLink]]
 * [[different_name_for_a_WikiLink|WikiLink]]
+* [[different name for a WikiLink (with spaces this time)|WikiLink]]
 * <http://www.gnu.org/>
 * [GNU](http://www.gnu.org/)
 * [Email](mailto:noone@invalid)
