* Allow discussion links on pages to be turned off with --no-discussion.

--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -172,6 +172,11 @@ These options configure the wiki.
   Disables use of a plugin. For example "--disable-plugin htmlscrubber"
   to do away with html sanitization.
 
+* --discussion, --no-discussion
+
+  Enables or disables "Discussion" links from being added to the header of
+  every page. The links are enabled by default.
+
 * --verbose
 
   Be vebose about what is being done.
