--- a/debian/changelog
+++ b/debian/changelog
@@ -45,8 +45,9 @@ ikiwiki (1.1) UNRELEASED; urgency=low
     text.
   * Removed --sanitize and --no-sanitize, replaced with --plugin htmlscrubber
     and --disable-plugin htmlscrubber.
+  * Allow discussion links on pages to be turned off with --no-discussion.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  5 May 2006 01:28:19 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  5 May 2006 14:03:54 -0400
 
 ikiwiki (1.0) unstable; urgency=low
 
