--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -2,11 +2,16 @@ Here's how to get ikiwiki. See [[setup]] for how to use it, and be sure to add y
 
 ## tarball
 
-Currently the tarball for the 1.0 release is available for download from [here](http://kitenet.net/~joey/debian/unstable/ikiwiki_1.0.tar.gz).
+The best place to download a tarball of the latest release is from 
+<http://packages.debian.org/unstable/source/ikiwiki>.
 
 ## Debian package
 
-While ikiwiki is being added to Debian, the deb can be downloaded from [here](http://kitenet.net/~joey/debian/unstable/ikiwiki_1.0_all.deb).
+If using Debian unstable, or soon, testing:
+
+        apt-get install ikiwiki
+
+Or download the deb from <http://packages.debian.org/unstable/web/ikiwiki>.
 
 While this deb has been developed on Debian unstable, it should also work on stable, although to get the CGI stuff working on stable, you will need to upgrade to a newer version of libcgi-formbuilder-perl, `3.02.02`.
 
@@ -14,3 +19,5 @@ While this deb has been developed on Debian unstable, it should also work on sta
 
 The current development version of ikiwiki can be accessed using subversion at 
 `svn://svn.kitenet.net/ikiwiki/trunk`
+
+The source in subversion can be browsed [with viewcvs](http://svn.kitenet.net/trunk/?root=ikiwiki).
