--- a/debian/changelog
+++ b/debian/changelog
@@ -46,8 +46,11 @@ ikiwiki (1.1) UNRELEASED; urgency=low
   * Removed --sanitize and --no-sanitize, replaced with --plugin htmlscrubber
     and --disable-plugin htmlscrubber.
   * Allow discussion links on pages to be turned off with --no-discussion.
+  * Add ikiwiki-mass-rebuild script, ripped out of the postinst.
+  * Add some new config items to the estseek.conf template, which are needed
+    by hyperestraier 1.2.3.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  5 May 2006 14:03:54 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  5 May 2006 16:23:03 -0400
 
 ikiwiki (1.0) unstable; urgency=low
 
