--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.1) UNRELEASED; urgency=low
+ikiwiki (1.1) unstable; urgency=low
 
   * Rename inlinepage to depends, so that it can be used to refer to more
     dependency relationships than just inlining. This will require a rebuild
@@ -50,7 +50,7 @@ ikiwiki (1.1) UNRELEASED; urgency=low
   * Add some new config items to the estseek.conf template, which are needed
     by hyperestraier 1.2.3.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  5 May 2006 16:23:03 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  5 May 2006 17:00:41 -0400
 
 ikiwiki (1.0) unstable; urgency=low
 
