web commit by joey

--- a/doc/news/version_1.1.mdwn
+++ b/doc/news/version_1.1.mdwn
@@ -69,7 +69,7 @@ Here's the full list of changes in ikiwiki 1.1:
      switch.
    * Added smiley plugin, nicely controlled and documented by the smileys page.
    * Copied in some smileys from Moin Moin.
-   * Allow links of the form \[[some page|page]], with whitespace in the link
+   * Allow links of the form \\[[some page|page]], with whitespace in the link
      text.
    * Removed --sanitize and --no-sanitize, replaced with --plugin htmlscrubber
      and --disable-plugin htmlscrubber.
