--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.2) UNRELEASED; urgency=low
+
+  * Remove dups from the brokenlinks list.
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  5 May 2006 23:56:32 -0400
+
 ikiwiki (1.1) unstable; urgency=low
 
   * Rename inlinepage to depends, so that it can be used to refer to more
