* Add libc6-dev to dependencies, needed to build wrappers.

--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -27,6 +27,8 @@ Suggestions of ideas for plugins:
 
 * interwiki links
 
+* random page (cgi plugin; how to link to it easily?)
+
 All the kinds of plugins that blogging software has is also a possibility:
 
 * Blog post calendar
