--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 ikiwiki (1.2) UNRELEASED; urgency=low
 
   * Remove dups from the brokenlinks list.
+  * Add libc6-dev to dependencies, needed to build wrappers.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  5 May 2006 23:56:32 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon,  8 May 2006 19:00:16 -0400
 
 ikiwiki (1.1) unstable; urgency=low
 
