--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -10,3 +10,5 @@ This page is to track users of ikiwiki.
 * [Bright Cloud](http://brightcloud.lcsee.wvu.edu/), a project of WVU LCSEE
 * [David Moreno Garza's personal wiki](http://anorak.com.ve/~damog/wiki)
 * [UK Software Patents info page](http://www.softwarepatents.co.uk/)
+
+See also: [ikiwiki popcon graph](http://people.debian.org/~igloo/popcon-graphs/index.php?packages=ikiwiki)
