--- a/doc/todo/case.mdwn
+++ b/doc/todo/case.mdwn
@@ -3,4 +3,9 @@ Being case insensative is handy, but it does make the [[BackLinks]] and
 support pagenames that have uppercase, while still allowing them to be
 linked to using any case.
 
-Also, newly created pagenames that include upper case characters should perhaps not automatically be converted to lower case then.
+Also, newly created pagenames that include upper case characters should
+perhaps not automatically be converted to lower case then.
+
+Also, it's currently possible to check in a filename with uppercase and
+ikiwiki will render it that way, but fail to edit it online and probably in
+other ways.
