web commit by joey

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -59,6 +59,8 @@ Bulleted list
 &#1506;&#1489;&#1512;&#1497;&#1514; &#1506;&#1460;&#1501; &#1504;&#1456;&#1511;&#1493;&#1468;&#1491;&#1493;&#1465;&#1514;
 ----
 
+So did that work? --[[Joey]]
+
 This sandbox is also a [[blog]]!
 
 [[inline pages="sandbox/*" rootpage="sandbox" show="5"]]
